# semantic-context-server

./: .env.test  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  error_linter.txt  pyproject.toml
.github/workflows/: ci-fast.yml  ci.yml  codeql.yml
apps/narrative_server/: README.md  app.py
docs/architecture/: modular-monolith-boundaries.md
docs/architecture/decisions/: ADR-001-modular-monorepo-migration.md
docs/en/: README.md  architecture.md  benchmark.md  rag_pipeline.md  setup.md
docs/en/todo/: c4_architecture.md  storage_architecture.md
docs/ia/CANONICAL/rules/: ENFORCEMENT_RULES.md
docs/pt-br/: README.md  architecture.md  benchmark.md  rag_pipeline.md  setup.md
docs/superpowers/specs/: README.md
infrastructure/docker/: .dockerignore  Dockerfile
src/semantic_context_server/: app.py
src/semantic_context_server/application/commands/: base_command.py  command_bus.py  command_registry.py
src/semantic_context_server/application/context/: campaign_context.py
src/semantic_context_server/application/dispatch/: application_registry.py  dispatcher.py  router.py
src/semantic_context_server/application/dto/: benchmark_request.py  llm_request.py  llm_response.py
src/semantic_context_server/application/ports/: benchmark_port.py  campaign_repository.py  dice_parser.py  embedding_gateway.py  event_bus.py  executor.py  interaction_runtime.py  llm.py  model_delegate.py  narrative_graph_port.py  response_cache.py  serializer.py  storage.py  storage_config.py  storage_policy.py  storage_types.py  vector_index_gateway.py  vector_memory_port.py  vector_reader_port.py  vector_writer_port.py
src/semantic_context_server/application/queries/: __init__.py  get_context_query.py  list_campaigns_query.py  query_bus.py  query_registry.py
src/semantic_context_server/application/runtime/: app_runtime.py  campaign_manager.py  campaign_runtime.py
src/semantic_context_server/application/services/: benchmark_analysis.py  context_orchestrator.py  context_selector.py  context_service.py  document_resolver.py  embedding_strategy.py  external_model_delegate.py  health_service.py  local_model_delegate.py  memory_service.py  message_service.py  narrative_graph_service.py  narrative_memory_service.py  retrieval_pipeline.py
src/semantic_context_server/application/state/: campaign_state.py  campaign_state_store.py
src/semantic_context_server/application/usecases/: create_campaign_usecase.py  delete_campaign_usecase.py  end_session_usecase.py  list_campaigns_usecase.py  (+4 more)
src/semantic_context_server/bootstrap/: container.py  container_builder.py  lifecycle.py
src/semantic_context_server/config/: __init__.py  env_loader.py  environments.py  loader.py  paths.py  profile.py  settings.py
src/semantic_context_server/modules/: memory_module.py  narrative_module.py  rag_module.py
src/semantic_context_server/shared/: execution.py  hash_utils.py  json_utils.py  resilience.py  text_io.py
src/semantic_context_server/usecases/: end_session.py  narrative_event.py  roll_dice.py  run_benchmark.py
src/semantic_context_server/vector_index/: adapter.py  builder.py  components.py  vector_batch_writer.py  vector_index_manager.py
tests/: README.md  conftest.py  test_prompt_caching.py
tests/architecture/: rules.py  test_layers.py  test_no_cycles.py  test_spec_compliance.py  test_wave1_structure.py  utils.py
tests/config/composition/: __init__.py  test_container_builder.py
tests/config/factories/: state.py
tests/config/fakes/: fake_time_provider.py
tests/config/harness/: base_harness.py  campaign_harness.py  message_harness.py  narrative_harness.py  retrieval_harness.py  scenario_harness.py  scenario_test_helper.py  usecase_harness.py
tests/config/helpers/: asserts.py  ctx.py  discord_factory.py  faulty_executor.py  golden_assert.py  inline_executor.py  io.py
tests/contracts/architecture/: test_architecture.py
tests/contracts/framework/: core.py  types.py  validator.py
tests/contracts/registry/: port_registry.py  storage_registry.py
tests/golden/: test_narrative.py  test_narrative_pipeline_golden.py  test_prompt_golden.py
tests/golden/prompts/: basic.txt  pipeline.txt  with_history.txt  with_memory.txt
tests/golden/snapshots/: attack_goblin.txt  memory_interaction.txt
tests/integration/runtime/: test_http_bootstrap_runtime.py  test_shutdown_stress.py
tests/integration/scenarios/: test_error_recovery.py  test_full_scenario.py  test_memory_persistence.py  test_multi_campaign_isolation.py  test_story_progression.py
tests/integration/storage/: test_json_stress.py  test_storage_contract.py  test_storage_failures.py  test_storage_integration.py
tests/integration/usecases/: test_end_session.py
tests/quality/: test_imports.py  test_no_test_dependencies.py  test_performance_slos.py
tests/runtime/: test_bootstrap.py  test_bootstrap_runtime.py  test_container.py  test_executor_timeout.py  test_lifecycle.py  test_signal_handlers.py
tests/unit/bootstrap/: test_container.py
tests/unit/config/: test_env_loader.py  test_loader.py  test_profile.py
tests/unit/domain/: test_dice_domain.py  test_dice_engine.py  test_dice_probability.py  test_npc.py
tests/unit/shared/: test_json_utils.py  test_resilient_call.py
tests/unit/specs_ia_units/: README.md  __init__.py  test_layer_isolation.py  test_layer_isolation_template.py  test_port_contracts_template.py  test_thread_isolation_template.py
tests/unit/usecases/: test_end_session.py  test_narrative.py  test_roll_dice.py  test_run_benchmark.py
tests/unit/utils/: test_hash_utils.py
tests/utils/: assertions.py  spy.py
tools/architecture/: import-boundary-matrix.yaml
tools/bootstrap/: install-git-hooks.sh  setup-precommit-hook.sh
tools/ci/: check_class_size_warn.py  check_env_access_boundaries.py  check_import_cycles.py  check_no_legacy_ai_paths.py  check_package_boundaries.py  check_test_hermetic_paths.py  check_text_io_centralization.py  check_text_io_encoding.py  check_warning_suppressions.py
tools/git-hooks/: commit-msg  post-merge  pre-commit  pre-push
tools/quality/: lint_runner.py
(+357 files in other folders)
